fix: provide background color for result tile which makes text readable

--- a/src/components/result-tile/result-tile.module.css
+++ b/src/components/result-tile/result-tile.module.css
@@ -6,7 +6,7 @@
   max-width: 300px;
   padding: 8px;
 
-  background-color: #fbcfe8;
+  background-color: rgba(0 0 0 / 30%);
   border-radius: 5px;
   box-shadow: 5px 5px 5px rgb(0 0 0 / 20%);
 }
